--- a/src/style.css
+++ b/src/style.css
@@ -20,8 +20,9 @@ main {
     border-radius: 10px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
+    font-family: Karla;
 }
 
 .container {
@@ -46,4 +47,29 @@ main {
     letter-spacing: 0em;
     text-align: center;
     cursor: pointer;
+}
+
+.roll-dice {
+    width: 92.16px;
+    height: 35.84px;
+    background: rgba(80, 53, 255, 1);
+    box-shadow: 0px 3.1999998092651367px 7.679999828338623px 0px rgba(0, 0, 0, 0.18);
+    border: none;
+    border-radius: 3.81px;
+    color: rgba(255, 255, 255, 1);
+    cursor: pointer;
+    font-family: Karla;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 19px;
+    letter-spacing: 0em;
+    text-align: center;
+}
+
+.roll-dice:focus {
+    outline: none;
+}
+
+.roll-dice:active {
+    box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
 }
